# dcs-gfx-support

./: .travis.yml  CMakeLists.txt  README.rst
cmake/: HUGH_SUPPORT_SetupOptions.cmake  HUGH_SUPPORT_SetupVariables.cmake
doc/: CMakeLists.txt
inc/boost/utility/detail/: singleton_manager.hpp
inc/gli/gtx/: io.hpp  io.inl
inc/glm/gtx/: limits.hpp  morton.hpp  morton.inl  utilities.hpp  utilities.inl
inc/hugh/: support.hpp
inc/hugh/support/: chrono.hpp  chrono_io.hpp  config.hpp  hasher.hpp  hasher.inl  io.hpp  io_utils.hpp  io_utils.inl  pci_ids.hpp  printable.hpp  printable.inl  refcounted.hpp  signal_handler.hpp  string.hpp  thread.hpp  thread.inl  trace.hpp  type_info.hpp
inc/hugh/support/io/: format_saver.hpp  format_saver.inl  manipulators.hpp  manipulators.inl  operators.hpp  operators.inl  position_saver.hpp  position_saver.inl  printer.hpp  printer.inl  scoped_redirect.hpp  scoped_redirect.inl
share/doc/: CMakeLists.txt
share/doc/hugh/: CMakeLists.txt
share/doc/hugh-support/: CMakeLists.txt  Doxyfile.dev.in  Doxyfile.usr.in
share/doc/hugh/support/: hugh_support.dev.doxygen.cfg.in  hugh_support.usr.doxygen.cfg.in
share/hugh/: CMakeLists.txt
share/hugh/cmake/: CMakeAddons_DefaultOptions.cmake  CMakeAddons_DefaultVariables.cmake  CMakeAddons_SetupVariables.cmake  CMakeLists.txt  FindHUGH.cmake  SetupBuildType.cmake  SetupCoverage.cmake  SetupInstallPrefix.cmake  SetupUnitTests.cmake
share/hugh/cmake/compiler/: clang.cmake  common-clang-gnu.cmake  msvc.cmake
share/hugh/cmake/functions/: cma_setup_library.cmake  cma_setup_test.cmake
share/hugh/proto/: CMakeLists.txt  proto.class.cpp  proto.class.hpp  proto.class.inl  proto.module.c  proto.module.h  proto.shader.glsl  proto.shader.hlsl  proto.test.cpp
share/hugh/travis.ci/: fetch-or-update-git-repo.sh
src/lib/: CMakeLists.txt
src/lib/boost/: CMakeLists.txt
src/lib/gli/: CMakeLists.txt
src/lib/gli/gtx/: io.cpp
src/lib/gli/test/: CMakeLists.txt  gtx_io.cpp
src/lib/glm/: CMakeLists.txt
src/lib/glm/gtx/: limits.cpp  morton.cpp  utilities.cpp
src/lib/glm/test/: CMakeLists.txt  gtx_limits.cpp  gtx_morton.cpp  gtx_utilities.cpp
src/lib/support/: CMakeLists.txt  chrono.cpp  chrono_io.cpp  hasher.cpp  io_utils.cpp  pci_ids.cpp  printable.cpp  refcounted.cpp  signal_handler_posix.cpp  signal_handler_win32.cpp  string.cpp  thread.cpp  trace.cpp  type_info.cpp  version.hpp.in
src/lib/support/io/: format_saver.cpp  manipulators.cpp  operators.cpp  position_saver.cpp  printer.cpp  scoped_redirect.cpp
src/lib/support/test/: CMakeLists.txt  chrono.cpp  hasher.cpp  io_format_saver.cpp  io_manipulators.cpp  io_operators.cpp  io_position_saver.cpp  io_printer.cpp  io_scoped_redirect.cpp  io_utils.cpp  pci_ids.cpp  printable.cpp  refcounted.cpp  signal_handler.cpp  thread.cpp  trace.cpp  type_info.cpp
