# -*- Mode:cmake -*-

####################################################################################################
#                                                                                                  #
# Copyright (C) 2016 University of Hull                                                            #
#                                                                                                  #
####################################################################################################

add_subdirectory(boost)
add_subdirectory(gli)
add_subdirectory(glm)
add_subdirectory(support)
